--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,4 +8,18 @@
   <div id="react-root"></div>
   <script src="/build/bundle.js"></script>
 </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Chatty</title>
+</head>
+  <body>
+    <div id="wrapper"></div>
+    <!-- need for every react file -->
+    <script src="/build/bundle.js"></script>
+  </body>
 </html>
